- CRASHFIX: in "ansicat", build_body_and_links was crashing with empty links
- CRASHFIX: "openk" was crashing when used in a shell pipe
- "theme" now accept "none" as a color to remove part of the theme you don’t want
- BUGFIX: do not urlify mailto, gopher and local urls
- improve Gopher selector code to be more robust (by JMCS)

## 3.0-beta1 - February 2nd 2026
This is a beta release before 3.0. Its goal is to find bugs, allow for a 
"string freeze" period for translators and give packagers time to adapt 
to the major changes: adding translations to their packages, adding 
xkcdpunk and unmerdify. Packagers are advised to build the package to 
report bugs but *not* to upload to their respective stable 
distribution.
Beta-testers and documenters are welcome to test and document new 
features and new tools.
Important changes:
- "opnk" is deprecated and replaced by "openk"
- Default image size now 100 instead of 40 (can be restored with "set images_size 40")
- Links to available feeds are now displayed at the bottom of HTML pages
- "root" has been modified to go to the root of the capsule/userspace "root /" for real root
- Images are now displayed in Gemini. This can be disabled with "set gemini_images false"
- "ls" command is deprecated
Features:
- Offpunk is now translatable (by JMCS)
- new "xkcdpunk" command-line tool to directly access your XKCD comics
- new "websearch" command which default to wiby.me
- new "share" command to send a page by email
- new "reply" command to send an email to the author of the page
- "cookies" command and http cookies are now supported in netcache (by Urja)
- "set default_cmd" now allows to configure what happen on empty lines
- "view switch" changes between readable/full view (by Andrew Fowlie)
- customize prompt with "set prompt_on" and "set prompt_off" (by Andrew Fowlie)
- "help help" now sends an email to the offpunk-users mailing-list
- "links" command now display all links