@@ -8,6 +8,7 @@ Changes since 3.0-beta1
 - "theme" now accept "none" as a color to remove part of the theme you don’t want
 - BUGFIX: do not urlify mailto, gopher and local urls
 - improve Gopher selector code to be more robust (by JMCS)
+- "bugreport" allows to send a bug report to the -devel list
 
 ## 3.0-beta1 - February 2nd 2026
 This is a beta release before 3.0. Its goal is to find bugs, allow for a 
